# 2048-esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.ghcr  Makefile  README.md  lvgl-v9-migration-plan.md  sdkconfig.defaults
.github/workflows/: build-base-image.yml  build-firmware.yml
boards/desktop/: CMakeLists.txt  board_init.c
boards/waveshare_p4_lcd35/: board_config.h  sdkconfig.defaults
boards/waveshare_s3_lcd2/: board_config.h  sdkconfig.defaults
boards/waveshare_s3_lcd35/: board_config.h  sdkconfig.defaults
boards/waveshare_s3_lcd35b/: board_config.h  sdkconfig.defaults
components/board_common/: CMakeLists.txt  board.h  board_backlight.c  board_display_axs15231b.c  board_display_st7789.c  board_display_st7796.c  board_i2c.c  board_i2c.h  board_init.c  board_touch_axs15231b.c  board_touch_cst816d.c  board_touch_ft6336.c  idf_component.yml
components/board_hw/: CMakeLists.txt  hw_display.c  hw_display.h  hw_i2c.c  hw_i2c.h  hw_pmic.cpp  hw_pmic.h
components/esp_bsp/: CMakeLists.txt  bsp_axp2101.cpp  bsp_axp2101.h
components/esp_lv_port/: CMakeLists.txt  lv_port.c
components/game_2048/: CMakeLists.txt  game_gesture.c  game_logic.c  game_screensaver.c  game_ui.c
components/game_2048/include/: game_gesture.h  game_logic.h  game_screensaver.h  game_ui.h
desktop/: CMakeLists.txt  lv_conf.h  main.c
docs/: axs15231b-raset-bug.md  cst816d-touch-report-rate.md  lvgl-timer-auto-delete.md
fonts/: font_clear_sans_bold_20.c  font_clear_sans_bold_24.c  font_clear_sans_bold_28.c  font_clear_sans_bold_30.c  font_clear_sans_bold_40.c  font_clear_sans_bold_50.c  font_clear_sans_regular_14.c
main/: CMakeLists.txt  game_main.c  idf_component.yml  main.c
scripts/: build_firmware.sh  docker_build.sh  docker_flash.sh  setup_env.sh
